# rdk-xraudio-adpcm

./: .gitignore  CONTRIBUTING.md  NOTICE  configure.ac
include/: adpcm.h
src/: Makefile.am  adpcm.c  adpcm_decode.c  adpcm_internal.h  adpcm_log.h
test/: Makefile.am  test.c
test/data/: adpcm_decode_test_16.raw  adpcm_decode_test_17.raw  adpcm_decode_test_18.raw  adpcm_decode_test_19.raw  adpcm_decode_test_20.raw
